<resources>
    <string name="app_name">FamilyConnectV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="intro">Unite, Organize, Thrive: Elevate Your Family Journey with FamilyConnect.</string>
    <string name="hello">Hello</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="logintitle">Ride to app</string>
    <string name="subtitle"><font color="#91b2fa"><b>Login</b></font> if you already have an account</string>
    <string name="emailenter">Enter your email</string>
    <string name="passwordenter">Enter your password</string>
    <string name="usernameenter">Enter your username</string>
    <string name="registersubtitle"><font color="#91b2fa"><b>Register</b></font> to get started</string>
    <string name="donthaveacc">I dont have account <font color="#91b2fa"><b>Register</b></font></string>
    <string name="haveacc">Already have an account <font color="#91b2fa"><b>Login</b></font></string>
    <string name="registertitle">Create an account</string>
    <string name="passwordconfirm">Confirm password</string>
    <string name="calendar">Calendar</string>
    <string name="chat">Messages</string>
    <string name="todo">To Do\'s</string>
    <string name="shoppinglist">Shopping</string>
    <string name="budget">Budget</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="privatetodo">Private To do\'s</string>
    <string name="grouptodo">Group To do\'s</string>
    <string name="addtask">Add new task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newtask">New Task</string>
    <string name="createGroup">Create new Group</string>
    <string name="addtasktogroup">Add new Task to Group</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="newactivity">New Activity</string>
    <string name="Meals">Meals</string>
</resources>