<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment"
    android:padding="20dp"
    android:background="@color/primary_color">

    <TextView
        android:id="@+id/registertitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registertitle"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registersubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registersubtitle"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registertitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usernameenter"
        android:layout_marginTop="48dp"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registersubtitle"
        app:startIconDrawable="@drawable/baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_username"
            android:layout_width="match_parent"
            android:padding="20dp"
            style="@style/TextInputEditText"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailenter"
        android:layout_marginTop="32dp"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_username"
        app:startIconDrawable="@drawable/baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_email"
            android:layout_width="match_parent"
            style="@style/TextInputEditText"
            android:padding="20dp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordenter"
        android:layout_marginTop="32dp"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_email"
        app:startIconDrawable="@drawable/baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_password"
            android:layout_width="match_parent"
            style="@style/TextInputEditText"
            android:inputType="textPassword"
            android:padding="20dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordconfirm"
        android:layout_marginTop="32dp"
        style="@style/TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_password"
        app:startIconDrawable="@drawable/baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_repassword"
            android:layout_width="match_parent"
            style="@style/TextInputEditText"
            android:inputType="textPassword"
            android:padding="20dp"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Button"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haveacc"
        android:layout_marginBottom="24dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>