<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/primary_color">

    <LinearLayout
        android:id="@+id/prvi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/blue_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calendar"
                    android:gravity="start"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end|bottom"
                    android:src="@drawable/schedule"
                    android:layout_margin="8dp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/blue_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"
                    android:gravity="start"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end|bottom"
                    android:src="@drawable/email"
                    android:layout_margin="8dp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drugi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prvi"
        app:layout_constraintStart_toStartOf="parent"
        >


        <androidx.cardview.widget.CardView
            android:id="@+id/todo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/blue_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/todo"
                    android:gravity="start"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end|bottom"
                    android:src="@drawable/list"
                    android:layout_margin="8dp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/shoppinglist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/blue_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shoppinglist"
                    android:gravity="start"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end|bottom"
                    android:src="@drawable/wishlist"
                    android:layout_margin="8dp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/treci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drugi"
        app:layout_constraintStart_toStartOf="parent"
        >


        <androidx.cardview.widget.CardView
            android:id="@+id/budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/blue_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Meals"
                    android:gravity="start"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end|bottom"
                    android:src="@drawable/fried_rice"
                    android:layout_margin="8dp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/blue_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/groups"
                    android:gravity="start"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end|bottom"
                    android:src="@drawable/teamwork"
                    android:layout_margin="8dp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cetvrti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/treci"
        app:layout_constraintStart_toStartOf="parent"
        >


        <androidx.cardview.widget.CardView
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            app:cardCornerRadius="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/blue_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:gravity="start"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end|bottom"
                    android:src="@drawable/budget"
                    android:layout_margin="8dp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>